--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="http://localhost/khachsan/Client">bấm vào đây</a>
+    <a href="https://github.com/Nasa2210/htm/tree/main/Client">bấm vào đây</a>
 </body>
 </html>
